deployment_2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetdemo
  namespace: mynamespace
  labels:
    app: dotnetdemo
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: dotnetdemo
  template:
    metadata:
      labels:
        app: dotnetdemo
    spec:
      containers:
      - name: dotnetdemo
        image: mandhasd/dotnetdemo:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
          requests:
            cpu: "100m"
            memory: "300Mi"
        livenessProbe:
          exec:
            command:
            - ls
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          exec:
            command:
            - ls
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 2
