service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: mynamespace # Replace with your desired namespace name
spec:
  selector:
    app: dotnetdemo
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
