networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: mynamespace
spec:
  podSelector:
    matchLabels:
      app: dotnetdemo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
